--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,30 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <title>BookCounter</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>BookCounter</title>
 
-  <base href="/"/>
+    <base href="/" />
 
-  <meta content="light dark" name="color-scheme"/>
-  <meta
-    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    name="viewport"/>
-  <meta content="telephone=no" name="format-detection"/>
-  <meta content="no" name="msapplication-tap-highlight"/>
+    <meta content="light dark" name="color-scheme" />
+    <meta
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      name="viewport"
+    />
+    <meta content="telephone=no" name="format-detection" />
+    <meta content="no" name="msapplication-tap-highlight" />
 
-  <link href="assets/icon/favicon.png" rel="icon" type="image/png"/>
+    <link href="assets/icon/favicon.png" rel="icon" type="image/png" />
 
-  <!-- add to homescreen for ios -->
-  <meta content="yes" name="mobile-web-app-capable"/>
-  <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
-  <link href="assets/manifest.webmanifest" rel="manifest">
-  <meta content="#1976d2" name="theme-color">
-</head>
+    <!-- add to homescreen for ios -->
+    <meta content="yes" name="mobile-web-app-capable" />
+    <meta content="black" name="apple-mobile-web-app-status-bar-style" />
+    <link href="assets/manifest.webmanifest" rel="manifest" />
+    <meta content="#1976d2" name="theme-color" />
+  </head>
 
-<body>
-<app-root></app-root>
-<noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
+  <body>
+    <app-root></app-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
+  </body>
 </html>
